# EkkalavyaAI

./: .replit  README.md  RENDER_DEPLOYMENT.md  Untapped Athletes & Coaches Online.md  install.sh  package-lock.json  package.json  pyproject.toml  render.yaml  render.yaml.bak  replit.md  start_ai_backend.py
.config/: settings
UnityARProject/Assets/Configs/: basketball_precision_v1.json  football_precision_v1.json  tennis_precision_v1.json
UnityARProject/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt  XRSettings.asset
ai_backend/: __init__.py  basketball_value_model.py  context_understanding_engine.py  custom_exceptions.py  decision_logic_engine.py  dynamic_overlay_renderer.py  main.py  multi_object_tracker.py  requirements.txt  simple_server.py  sport_pack_converter.py  sport_pack_system.py  sport_specific_detectors.py  sports_analyzer.py  unified_cv_pipeline.py  unity_ar_bridge.py
ai_backend/ai_backend/sport_packs/: archery.json  badminton.json  basketball.json  boxing.json  conversion_report.json  cricket.json  cycling.json  fencing.json  football.json  golf.json  gymnastics.json  hockey.json  judo.json  karate.json  lacrosse.json  rugby.json  softball.json  squash.json  swimming.json  table_tennis.json  tennis.json  track_field.json  volleyball.json  weightlifting.json  wrestling.json
ai_backend/sport_packs/: archery.json  badminton.json  basketball.json  boxing.json  conversion_report.json  cricket.json  cycling.json  fencing.json  football.json  golf.json  gymnastics.json  hockey.json  judo.json  karate.json  lacrosse.json  rugby.json  softball.json  squash.json  swimming.json  table_tennis.json  tennis.json  track_field.json  volleyball.json  weightlifting.json  wrestling.json
attached_assets/: Biomechanical_Analysis_Tools_1755204248114.xlsx  Pasted--Deep-Learning-Frameworks-tensorflow-2-13-0-torch-2-0-0-torchvision-0-15-0-scikit-learn-1-3-1748019714369.txt  Pasted--Deep-Learning-Frameworks-tensorflow-2-13-0-torch-2-0-0-torchvision-0-15-0-scikit-learn-1-3-1748020597027.txt  Pasted--PROFESSIONAL-SCAN-SCREEN-CLINICALLY-SUPERIOR-LIGHTWEIGHT--1757101507688_1757101507691.txt  Pasted--Utility-Patent-Interview-Prep-Sports-AI-Ekkalavya-Q1-What-is-the-core-inventive-step-of-y-1757404057061_1757404057065.txt  Pasted-3-warnings-e-Daemon-compilation-failed-Could-not-connect-to-Kotlin-compile-daemon-java-lang-Runt-1755415738864_1755415738867.txt  Pasted-Category-Package-Tool-Description-Pose-Motion-Tracking-MediaPipe-Real-time-pose-hand-and-face-1755204565625_1755204565625.txt  Pasted-FAILURE-Build-failed-with-an-exception-What-went-wrong-Execution-failed-for-task-app-proc-1755416384118_1755416384120.txt  Pasted-Goal-Create-a-Unity-2022-LTS-AR-Foundation-project-that-scans-a-real-flat-space-lays-down-a-re-1757084079716_1757084079718.txt  Pasted-PS-C-Users-User-Desktop-EkkalavyaAI-SportsAIConnect-EkkalavyaAI-SportsAIConnect-flutter-app-flutte-1755082896995_1755082896997.txt  Pasted-Package-file-picker-linux-references-file-picker-linux-as-the-default-plugin-but-it-does-not-provid-1755110802725_1755110802739.txt  Pasted-Remove-unused-audio-DSP-package-from-project-dependencies-27-minutes-ago-Improve-data-processing-for-1757418995089_1757418995091.txt  Pasted-Think-of-Ekkalavya-as-a-core-engine-with-Sport-Packs-Each-pack-plugs-in-rules-geometry-objects--1757392169297_1757392169298.txt  Pasted-W-OnBackInvokedCallback-24408-OnBackInvokedCallback-is-not-enabled-for-the-application-W-OnBackI-1755539684435_1755539684438.txt  Pasted-exception-c-Users-User-AppData-Local-Pub-Cache-hosted-pub-dev-ar-flutter-plugin-updated-0-0-1-andr-1755416039753_1755416039755.txt  Pasted-import-package-flutter-material-dart-import-package-ekkalavya-sports-ai-core-theme-app-theme-dar-1755449780895_1755449780899.txt  Pasted-lib-features-coach-presentation-pages-students-management-dart-128-34-Error-filteredStudents-is-1755450758342_1755450758345.txt  Pasted-lib-features-player-presentation-pages-player-dashboard-dart-155-7-Error-Duplicated-named-argument-1755507872791_1755507872792.txt  Pasted-lib-features-player-presentation-pages-player-dashboard-dart-175-11-Error-Method-not-found-Botto-1755507360838_1755507360851.txt  Pasted-lib-features-player-presentation-pages-player-dashboard-dart-322-37-Error-Member-not-found-prima-1755454679744_1755454679746.txt  Pasted-lib-features-player-presentation-pages-player-dashboard-dart-65-15-Error-The-method-CustomAppBar--1755451718401_1755451718476.txt  Pasted-lib-features-player-presentation-pages-player-dashboard-dart-65-15-Error-The-method-CustomAppBar--1755452300025_1755452300027.txt  Pasted-lib-features-shared-presentation-widgets-achievement-badges-dart-883-13-Error-if-can-t-be-used-a-1755443011464_1755443011466.txt  fixed-auth-context.ts  fixed-login-improved.ts  multirole-login-system (1).tsx  multirole-login-system.tsx  tricolor-indian-flag-theme-modern-background-republic-day_1055-23042_1749325589202.avif
client/: index.html
client/src/: App-clean.tsx  App-fixed.tsx  App.tsx  index.css  main.tsx
client/src/components/: CoachDashboard.tsx  PlayerDashboard.tsx  RealComputerVisionAR.tsx  RealTimeARAnalysis.tsx  SportARVisualization.tsx  SportSpecificARTools.tsx  VideoProcessor.tsx  VirtualVenueSelector.tsx  WebRoomModeAR.tsx
client/src/context/: auth-context-improved.tsx  auth-context.tsx  auth.tsx  ekalavya-auth.tsx  simple-auth.tsx  theme-provider.tsx
client/src/hooks/: use-media-query.ts  useRoomModeSync.ts  useWebSocketAnalysis.ts
client/src/lib/: enhanced-biomechanics.ts  mediapipe-analyzer.ts  room-mode-detector.ts  sportsAnalysis.ts  utils.ts
flutter_app/: UNITY_AR_INTEGRATION.md  pubspec.yaml
flutter_app/android/: build.gradle  gradle.properties  local.properties
flutter_app/ios/: Podfile
flutter_app/lib/: main.dart
flutter_app/scripts/: build_unity_flutter.sh
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html
server/: index.dev.ts  index.ts  replitAuth.ts  routes.ts  storage.ts  video-analysis.ts  websocket.ts
server/routes/: admin-unity-ar.ts  room-mode-sync.ts  unity-ar.ts
shared/: schema.ts
(+156 files in other folders)
