[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    # Core Backend
    "aiofiles>=24.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "websockets>=11.0.2",
    
    # Deep Learning Frameworks
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    
    # Numerical Computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    
    # Computer Vision & Pose Analysis
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "mediapipe>=0.10.0",
    "ultralytics>=8.0.0",
    "detectron2>=0.6.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "imageio>=2.31.0",
    "albumentations>=1.3.0",
    
    # Sport-Specific Biomechanical Analysis
    # Combat Sports
    "punch-tracking>=0.3.0",
    "combat-analytics>=0.2.0",
    "strike-velocity>=0.1.0",
    "guard-position>=0.2.0",
    "footwork-analysis>=0.1.0",
    "reaction-time>=0.2.0",
    
    # Precision Sports
    "ballistics>=1.0.0",
    "arrow-dynamics>=0.2.0",
    "projectile-physics>=0.3.0",
    "target-tracking>=0.3.0",
    "stability-analysis>=0.2.0",
    "breathing-control>=0.1.0",
    
    # Ice/Roller Skating
    "blade-tracking>=0.2.0",
    "edge-analysis>=0.1.0",
    "rotation-dynamics>=0.3.0",
    "balance-metrics>=0.2.0",
    "jump-mechanics>=0.1.0",
    "spin-analysis>=0.2.0",
    
    # Field Events
    "takeoff-mechanics>=0.3.0",
    "trajectory-optimization>=0.2.0",
    "approach-analysis>=0.1.0",
    "pole-dynamics>=0.1.0",
    "landing-technique>=0.2.0",
    "velocity-tracking>=0.3.0",
    
    # Swimming Analysis
    "stroke-analysis>=0.2.0",
    "underwater-tracking>=0.1.0",
    "fluid-dynamics>=0.3.0",
    "lap-timing>=0.1.0",
    "breathing-pattern>=0.1.0",
    
    # Tennis/Badminton
    "racquet-tracking>=0.2.0",
    "swing-analysis>=0.1.0",
    "shuttlecock-trajectory>=0.1.0",
    "court-positioning>=0.2.0",
    "serve-analysis>=0.3.0",
    
    # Basketball Analysis
    "ball-tracking>=0.3.0",
    "shooting-form>=0.2.0",
    "movement-analytics>=0.1.0",
    "court-vision>=0.2.0",
    "dribbling-metrics>=0.1.0",
    
    # Gymnastics Analysis
    "routine-analysis>=0.1.0",
    "balance-assessment>=0.2.0",
    "flexibility-metrics>=0.1.0",
    "execution-scoring>=0.1.0",
    "apparatus-interaction>=0.2.0",
    
    # Yoga Analysis
    "asana-recognition>=0.2.0",
    "alignment-checker>=0.1.0",
    "breathing-analysis>=0.1.0",
    "flexibility-assessment>=0.2.0",
    
    # Athletics (Track & Field)
    "gait-analysis>=0.3.0",
    "sprint-mechanics>=0.2.0",
    "hurdle-technique>=0.1.0",
    "relay-handoff>=0.1.0",
    "endurance-metrics>=0.2.0",
    
    # Advanced Motion Analysis
    "open3d>=0.17.0",
    "trimesh>=3.22.0",
    "pyvista>=0.41.0",
    "vtk>=9.2.0",
    "filterpy>=1.4.5",
    "ahrs>=0.3.1",
    "kinepy>=0.2.0",
    "biomech>=0.1.0",
    "joint-angles>=0.2.0",
    "muscle-activation>=0.1.0",
    
    # Force & Impact Analysis
    "pymunk>=6.5.0",
    "bullet3>=3.25",
    "pybullet>=3.2.5",
    "force-analysis>=0.2.0",
    "ground-reaction>=0.1.0",
    "impact-metrics>=0.2.0",
    
    # AR/VR Visualization
    "pyopengl>=3.1.7",
    "moderngl>=5.8.0",
    "vispy>=0.12.0",
    "pyglet>=2.0.0",
    "openvr>=1.23.0",
    "pyvr>=0.1.0",
    
    # Sensor Integration
    "pyserial>=3.5",
    "bleak>=0.20.0",
    "pyusb>=1.2.1",
    "imu-fusion>=0.3.0",
    "pressure-sensors>=0.1.0",
    "heart-rate-analysis>=0.2.0",
    "emg-processing>=0.1.0",
    
    # Real-time Processing
    "pyzmq>=25.1.0",
    "redis>=4.6.0",
    "celery>=5.3.0",
    "aiortc>=1.6.0",
    
    # Audio Analysis
    "librosa>=0.10.0",
    "pyaudio>=0.2.11",
    "soundfile>=0.12.0",
    "music21>=8.1.0",
    
    # Performance Analytics
    "pingouin>=0.5.3",
    "lifelines>=0.27.0",
    "pymc>=5.7.0",
    "bayesian-optimization>=1.4.0",
    "tsfresh>=0.20.0",
    "prophet>=1.1.4",
    
    # Visualization & Reporting
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "bokeh>=3.2.0",
    "plotly-dash>=2.14.0",
    "streamlit>=1.25.0",
    
    # Model Optimization
    "onnx>=1.14.0",
    "tensorrt>=8.6.0",
    "openvino>=2023.0.0",
    "tflite-runtime>=2.13.0",
    
    # Database & Storage
    "pymongo>=4.5.0",
]
